--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,13 @@
     "allowJs": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "target": "ESNext",
+    "moduleResolution": "Node",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "strict": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "paths": {
       "@/*": [
         "./src/*"
@@ -15,25 +22,25 @@
     ],
     "types": [
       "@dcloudio/types",
-      "miniprogram-api-typings",
+      "@types/wechat-miniprogram",
       "@uni-helper/uni-app-types",
       "@uni-helper/uni-ui-types"
     ]
   },
-  // 校验 uni-app 组件类型
   "vueCompilerOptions": {
     // experimentalRuntimeMode 已废弃，现调整为 nativeTags，请升级 Volar 插件至最新版本
     "nativeTags": [
       "block",
       "component",
       "template",
-      "slot",
+      "slot"
     ]
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "./components.d.ts",
   ]
 }
